build: remove all JDK8 references
Signed-off-by: manticore-projects <andreas@manticore-projects.com>