@@ -49,7 +49,7 @@
         <module>webswing-directdraw</module>
         <module>webswing-server</module>
         <module>webswing-assembly</module>
-        <module>webswing-modpatch</module>
+<!--        <module>webswing-modpatch</module>-->
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -269,7 +269,25 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.0</version>
+                    <version>3.0.0-M7</version>
+                    <configuration>
+                        <argLine>
+                            --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+                            --add-exports=java.desktop/sun.awt.dnd=ALL-UNNAMED
+                            --add-exports=java.base/sun.nio.cs=ALL-UNNAMED
+                            --add-exports=java.desktop/sun.java2d=ALL-UNNAMED
+                            --add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED
+                            --add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED
+                            --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED
+                            --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
+                            --add-exports=java.desktop/java.awt.dnd=ALL-UNNAMED
+                            --add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED
+                            --add-exports=java.desktop/sun.awt.im=ALL-UNNAMED
+                            --add-exports=java.desktop/sun.font=ALL-UNNAMED
+                            --add-exports=java.desktop/sun.print=ALL-UNNAMED
+                            --add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED
+                        </argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -360,7 +378,31 @@
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.10.1</version>
+                <configuration>
+                    <!--keep th  e code level at 8 to avoid module access compilation errors in IDE-->
+                    <source>11</source>
+                    <target>11</target>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                    <compilerArgs>
+                        <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.awt.dnd=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.base/sun.nio.cs=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.java2d.pipe=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/java.awt.peer=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/java.awt.dnd=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.awt.im=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.print=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.print=ALL-UNNAMED</arg>
+                        <arg>--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
